Fix collapse

--- a/packages/scss/src/components/_collapse.scss
+++ b/packages/scss/src/components/_collapse.scss
@@ -1,5 +1,9 @@
 .collapse {
 	display: block;
+
+	summary::-webkit-details-marker {
+		display: none;
+	}
 }
 
 .collapse-title {
@@ -15,10 +19,10 @@
 
 	&::before {
 		@include makeIcon("chevron_east");
-
 		font-size: _theme("sizes.smaller.font-size");
 		margin-right: _theme("spacings.smallest");
 		transition: transform _theme("commons.animations.durations.fast");
+		vertical-align: middle;
 	}
 }
 
